--- a/config/security_config.json
+++ b/config/security_config.json
@@ -1,10 +1,88 @@
 {
-  "quantum_resistant_cryptography": {
-    "algorithm": "Lattice-based cryptography",
-    "key_size": 2048
-  },
-  "ai_powered_threat_detection": {
-    "model": "Neural Network",
-    "training_data": "GNX threat detection dataset"
+  "security": {
+    "quantum_resistant_cryptography": {
+      "algorithm": "Lattice-based cryptography",
+      "key_size": 2048,
+      "parameters": {
+        "n": 2048,
+        "q": 4096,
+        "k": 256,
+        "eta": 0.5,
+        "beta": 0.5
+      },
+      "implementation": "New Hope"
+    },
+    "ai_powered_threat_detection": {
+      "model": "Neural Network",
+      "training_data": "GNX threat detection dataset",
+      "parameters": {
+        "layers": 5,
+        "neurons": 256,
+        "activation": "relu",
+        "optimizer": "adam"
+      },
+      "implementation": "TensorFlow"
+    },
+    "access_control": {
+      "authentication": {
+        "type": "Multi-Factor Authentication (MFA)",
+        "factors": [
+          "password",
+          "biometric",
+          "one-time password (OTP)"
+        ]
+      },
+      "authorization": {
+        "type": "Role-Based Access Control (RBAC)",
+        "roles": [
+          "admin",
+          "user",
+          "guest"
+        ]
+      }
+    },
+    "data_encryption": {
+      "algorithm": "AES-256-GCM",
+      "key_size": 256,
+      "parameters": {
+        "iv_size": 128,
+        "tag_size": 128
+      }
+    },
+    "network_security": {
+      "firewall": {
+        "type": "Stateful Firewall",
+        "rules": [
+          {
+            "protocol": "tcp",
+            "port": 8545,
+            "action": "allow"
+          },
+          {
+            "protocol": "udp",
+            "port": 8080,
+            "action": "deny"
+          }
+        ]
+      },
+      "intrusion_detection": {
+        "type": "Anomaly-Based Intrusion Detection",
+        "parameters": {
+          "threshold": 0.5,
+          "window_size": 100
+        }
+      }
+    },
+    "compliance": {
+      "regulations": [
+        "GDPR",
+        "HIPAA",
+        "PCI-DSS"
+      ],
+      "standards": [
+        "ISO 27001",
+        "NIST 800-53"
+      ]
+    }
   }
-}
+  }
